# ZenithLang

./: .clangd  .gitignore  .output.txt  CMakeLists.txt  CTestConfig.cmake  IMPROVEMENTS.md  Makefile  README.md  TESTING_INFRASTRUCTURE.md  build.sh  examples_fn.zen  main.zen
.cache/clangd/index/: ASTBuilder.h.EE81DE7B4B4FBD78.idx  CodeGenerator.cpp.9386D4C1A326656D.idx  CodeGenerator.h.5BA85B97F3D9FA13.idx  main.cpp.4DDA700F1CC58D4D.idx
.github/: copilot-instructions.md
.github/workflows/: ci.yml  coverage.yml  release.yml
cmake/: FindANTLR.cmake
docs/: AI_INSTRUCTIONS.md  LANGUAGE_FEATURES.md  TESTING.md  fn-keyword.md  language-spec.md
examples/: calculator.zenith  demo.zenith  fibonacci.zenith  primes.zenith
grammar/: ZenithLexer.g4  ZenithParser.g4
include/: ASTBuilder.h  CodeGenerator.h  CustomLang.h.inc  CustomLangDialect.h.inc  Dialect.h  Ops.h  Types.h
include/Zenith/: ZenithOps.td  ZenithRuntime.h
include/zenith/: ZenithDialect.h  ZenithPasses.h  ZenithRuntime.h  stdlib_registry.hpp
include/zenith/backend/: execution_pass.hpp  mlir_pass.hpp  pass.hpp  pipeline.hpp
include/zenith/frontend/: parser.hpp
include/zenith/ir/: constraint_validator.hpp  hir.hpp  immutability_checker.hpp
include/zenith/td/: ExampleDialect.td  ZenithOps.td
lib/Zenith/: ZenithBridge.cpp  ZenithRuntime.cpp
lib/zenith/: ZenithBridge.cpp  ZenithDialect.cpp  ZenithRuntime.cpp  ZenithToStandard.cpp  stdlib_registry.cpp
lib/zenith/backend/: execution_pass.cpp  mlir_pass.cpp
lib/zenith/frontend/: parser.cpp
lib/zenith/ir/: constraint_validator.cpp  hir.cpp  immutability_checker.cpp
lib/zenith/stdlib/: array.zen  constraints.zen  core.zen
scripts/: regen_parser.sh
src/: ASTBuilder.cpp  CodeGenerator.cpp  Dialect.cpp  Ops.cpp  Types.cpp  main.cpp
tests/: integration_test.cpp  test_codegen.cpp  test_parser.cpp
tools/: main.cpp  zenith-cli.cpp
tools/rust_parser/: Cargo.toml  Dockerfile  build.rs  test.zen
tools/rust_parser/src/: main.rs
